--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <title>Love Runnning</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        Header content
+    </header>
+    <section>
+        Hero image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social media links
+    </footer>
 </body>
 </html>
