--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
+
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Love Runnning</title>
+    <title>Love Running</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        Hero image
+        Hero Image
     </section>
     <section>
         Club Ethos
@@ -40,8 +40,8 @@
         Running locations, distances and times
     </section>
     <footer>
-        Social media links
+        social links here
     </footer>
 </body>
 
-</html>
+</html> 
