--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10K</h3>
-            <h3>Pheonix Park</h3>
+            <h3>Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
@@ -106,7 +106,7 @@
             <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10K</h3>
-            <h3>Pheonix Park</h3>
+            <h3>Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
